# web-context-builder

./: .gitignore  README.md  pyproject.toml
src/web_context_builder/: __init__.py  __main__.py  browser.py  cli.py  config.py  crawler.py  parser.py  storage.py  visualizer.py
